force-app/main/default/objects/Language_Model__c/Language_Model__c.object-meta.xml
<CustomObject>
    <label>Language Model</label>
    <nameField>
        <label>Language Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Language Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>