force-app/main/default/objects/Language_Model__c/fields/Einstein_Model_Id__c.field-meta.xml
<CustomField>
    <fullName>Einstein_Model_Id__c</fullName>
    <label>Einstein Model Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>