force-app/main/default/objects/Language_Model__c/fields/Model_Type__c.field-meta.xml
<CustomField>
    <fullName>Model_Type__c</fullName>
    <label>Model Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intent</fullName>
            </value>
            <value>
                <fullName>Sentiment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>